# Nsight_profiling

./: README.md
Perf_SDK_Vulkan_3DGS/: CMakeLists.old  CMakeLists.txt
Perf_SDK_Vulkan_3DGS/NvPerf/doc/metrics/: MetricsEnumerator-AD10X.html  MetricsEnumerator-GA10B.html  MetricsEnumerator-GA10X.html  MetricsEnumerator-GB20X.html  MetricsEnumerator-TU10X.html  MetricsEnumerator-TU11X.html
Perf_SDK_Vulkan_3DGS/NvPerfUtility/tools/: CMakeLists.txt
Perf_SDK_Vulkan_3DGS/NvPerfUtility/tools/GpuDiag/: GpuDiagGApi_DX.h  GpuDiagGApi_VK.h  GpuDiagHtmlTemplate.cpp
Perf_SDK_Vulkan_3DGS/NvPerfUtility/tools/MetricsEnumerator/: CMakeLists.txt  MetricsEnumerator.cpp  MetricsEnumerator.h  MetricsEnumeratorHtmlTemplate.cpp
Perf_SDK_Vulkan_3DGS/cmake/: NvPerfConfig.cmake  NvPerfUtilityConfig.cmake
Perf_SDK_Vulkan_3DGS/src/: gaussian_splatting.cpp  gaussian_splatting.h  gaussian_splatting_ui.cpp  nvperf_wrapper.cpp  nvperf_wrapper.h
vulkan_profiling/: .gitmodules  README.md  config_gen.py  convert.py  helper_b.py  profiler_b.py  psnr.py  rast.sh  tt_split.py  vkgs.sh
vulkan_profiling/pbr_pipeline/: CMakeLists.txt
vulkan_profiling/pbr_pipeline/include/: pbr.h
vulkan_profiling/pbr_pipeline/src/: pbr_pipe.cpp
vulkan_profiling/pbr_pipeline/src/base/: VulkanDebug.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanglTFModel.cpp  VulkanglTFModel.h  vulkanexamplebase.cpp  vulkanexamplebase.h
vulkan_profiling/pbr_pipeline/src/pbr/: pbr.cpp
vulkan_profiling/pbr_pipeline/src/shader/: offscreen.vert  pbr.frag  pbr.vert  pbr_shadow.frag  pbr_shadow.vert
vulkan_profiling/profile_dtc/: best_calibration_psnr.csv  calibration_psnr_results.csv  compare.py  count_vertices.py  helper.py  image_create.py  nghx.txt  profiler.py  psnr.py  psnr_cal.py  psnr_vk.py  test_scenes  test_scenes_b
vulkan_profiling/rast_pipeline/: CMakeLists.txt  imgui.ini
vulkan_profiling/rast_pipeline/include/: camera.h  rast.h
vulkan_profiling/rast_pipeline/src/: rasterizer.cpp
vulkan_profiling/rast_pipeline/src/rast/: camera.cc  gltf_scene.cpp  gltf_scene.h  rast.cpp  texture.cpp  texture.h
vulkan_profiling/vk_gaussian_splatting/: CMakeLists.txt
vulkan_profiling/vk_gaussian_splatting/src/: gaussian_splatting.cpp  gaussian_splatting.h  gaussian_splatting_ui.cpp  main.cpp  scene.cpp  scene.hpp  tinygltf_impl.cpp
